service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-api-service
spec:
  type: LoadBalancer
  selector:
    app: my-api
  ports:
  - port: 80          # external port users hit
    targetPort: 5000  # must match your containerPort
